fixed overflow error

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,10 @@ body {
 .app-body{
   width:80%;
   margin-left:10%;
+  margin-top: 20px;
+  overflow-y: auto;
   background: #95a5a6;
+  padding: 10px;
 }
 
 
